--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,5 +8,18 @@
         <h2>Written with a little guidance from Moringa School</h2>
         <p>Hello, world!</p>
         <p>Welcome to my first web page!</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
+    <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And beyond!</li>
+  </ol>
+
     </body>
 </html>
